<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ffmpegApp</string>
    <string name="audio_transform">AUDIO TRANSFORM</string>
    <string name="protocol">PROTOCOL</string>
    <string name="format">FORMAT</string>
    <string name="codec">CODEC</string>
    <string name="filter">FILTER</string>
    <string name="audio">AUDIO</string>
    <string name="ffmpeg_use">是否使用FFmpegCmd</string>
    <string name="audio_cut">AUDIO CUT</string>
    <string name="audio_concat">AUDIO CONCAT</string>
    <string name="audio_mix">AUDIO MIX</string>
    <string name="audio_play_by_audio_track">AUDIO PLAY BY AUDIO TRACK</string>
    <string name="open_sl_play">OPEN SL PLAY</string>
    <string name="audio_encode">AUDIO ENCODE</string>
    <string name="pcm_concat">PCM CONCAT</string>

    <string name="main_notification_title_template">Main: %1$s</string>

    <string name="main_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="stop_opensl_es_play">STOP OPENSL ES PLAY</string>
    <string name="video">VIDEO</string>
    <string name="tran" tools:ignore="ExtraTranslation">tran</string>
    <string name="cut" tools:ignore="ExtraTranslation">CUT</string>
    <string name="shot" tools:ignore="ExtraTranslation">SHOT</string>
    <string name="water" tools:ignore="ExtraTranslation">WATER</string>
    <string name="gif" tools:ignore="ExtraTranslation">GIF</string>
    <string name="record" tools:ignore="ExtraTranslation">RECORD</string>
    <string name="combine" tools:ignore="ExtraTranslation">COMBINE</string>
    <string name="multi" tools:ignore="ExtraTranslation">MULTI</string>
    <string name="reverse" tools:ignore="ExtraTranslation">REVERSE</string>
    <string name="denoise" tools:ignore="ExtraTranslation">DENOISE</string>
    <string name="toimage" tools:ignore="ExtraTranslation">ToImage</string>
    <string name="pip" tools:ignore="ExtraTranslation">PIP</string>
    <string name="mov" tools:ignore="ExtraTranslation">MOV</string>
    <string name="select">SELECT</string>
    <string name="play">PLAY</string>
    <string name="video_play">VIDEO PLAY</string>


</resources>
